fix: preserve null discount entries for validation