@@ -1,6 +1,8 @@
 package com.example.payrollvalidation.dto;
 
 import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public record PayrollValidationRequest(
@@ -12,6 +14,6 @@ public record PayrollValidationRequest(
         String period
 ) {
     public PayrollValidationRequest {
-        discounts = discounts == null ? null : List.copyOf(discounts);
+        discounts = discounts == null ? null : Collections.unmodifiableList(new ArrayList<>(discounts));
     }
 }
